<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    >

    <!--tools:context="com.jockay.apmt.view.activities.MainActivity"-->
    <item
        android:id="@+id/ac_people_number"
        android:visible="true"
        android:title="1"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/ac_settings"
        android:visible="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"
        />

    <item
        android:title="@string/ac_new_item"
        android:id="@+id/ac_delete_items"
        android:icon="@drawable/ic_remove_white_24dp"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:title="@string/ac_new_item"
        android:id="@+id/ac_new_item"
        android:visible="true"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        app:showAsAction="always"
        android:numericShortcut="2"
        />

    <item
        android:title="@string/ac_new_item_simple"
        android:id="@+id/ac_new_item_simple"
        android:visible="true"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"
        android:numericShortcut="2"
        />

</menu>